--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
     "import/prefer-default-export": "off"
   },
   "settings": {
-    "import/resolve": {
+    "import/resolver": {
       "babel-plugin-root-import": {}
     }
   }
